@@ -1,0 +1,13 @@
+
+
+<h2><%= dotaData.localized_name %></h2>
+
+<ul>
+  <li><%= dotaData.name %></li>
+  <li><%= dotaData.localized_name %></li>
+  <li><%= dotaData.id%></li>
+  <img src="http://cdn.dota2.com/<%= dotaData.img %>">
+  <li>Picked in Pro Matches: <%= dotaData.pro_pick %></li>
+  <li>Won in Pro Matches: <%= dotaData.pro_win %></li>
+  <li>Banned in Pro Matches: <%= dotaData.pro_ban %></li>
+</ul>
