@@ -7,9 +7,10 @@
       <div class="grid">
         <div >            
           <h2><%= dotaData.localized_name %></h2>
-          <h2><%= dotaData.img %></h2>
+          <h4><%= dotaData.id%></h4>
           <img src="http://cdn.dota2.com/<%= dotaData.img %>"> <!-- make sure to add http://cdn.dota2.com/-->
         </div>
+        <br>
     </div>
         <% }); %>
 </div>
